[tool.poetry]
name = "repl_python3_1ptone"
version = "0.1.0"
description = ""
authors = ["Jeusto <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pymongo = "^3.12.0"
python-dotenv = "^0.19.0"
validators = "^0.18.2"
srv = "^1.1.0"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
